[workspace]

resolver = "2"
members = ["openmm-data", "openmm"]

[workspace.package]
version = "0.0.1"
authors = ["Alessandro Rosetti <alessandro.rosetti@gmail.com>"]
edition = "2024"

# [profile.dev]
# opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false

# Profiling: release-speed but with symbols intact for Tracy/flamegraph
[profile.profiling]
inherits = "release"
strip = false
debug = 1          # line-level debug info (minimal overhead, enough for flamegraphs)

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"      # Bevy systems take Res/Query by value
too_many_arguments = "allow"           # Bevy systems often need many params
type_complexity = "allow"              # Bevy query types get complex

[workspace.lints.rust]
dead_code = "warn"
unused_imports = "warn"
