[package]
name = "lod"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
byteorder = "1.4.3"
flate2 = "1.0.26"
image = "0.24.6"

# [profile.dev]
# opt-level = 1

# [profile.release]
# debug = true

# [profile.dev.package."*"]
# opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
