[package]
authors = ["Alessandro Rosetti <alessandro.rosetti@gmail.com>"]
name = "map_viewer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lod = { path = "../lod" }
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_prototype_debug_lines = { version = "0.11.1", features = ["3d"] }
image = "0.24.7"
random_color = "0.6.1"
bevy_mod_billboard = "0.4.1"
bevy-inspector-egui = "0.19.0"
bevy_rapier3d = { version = "*", features = ["simd-stable", "debug-render-3d"] }

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
