[package]
authors = ["Alessandro Rosetti <alessandro.rosetti@gmail.com>"]
name = "map_viewer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lod = { path = "../lod" }
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
#bevy_prototype_debug_lines = { version = "0.11.1", features = ["3d"] }
#bevy_mod_billboard = { git = "https://github.com/kulkalkul/bevy_mod_billboard", rev = "1fabd22" }
bevy-inspector-egui = "0.23.4"
random_color = "0.8.0"
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
