[package]
name = "openmm-data"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bitflags = { version = "2", features = ["serde"] }
byteorder = "1.5"
csv = "1"
flate2 = "1.0"
hexdump = "0.1"
image = "0.25"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smk = "0.1.0"
openmm-archive = { path = "../openmm-archive" }

[lints]
workspace = true

[[example]]
name = "lod_roundtrip"

[[example]]
name = "create_test_lod"
