[package]
authors = ["Alessandro Rosetti <alessandro.rosetti@gmail.com>"]
name = "openmm"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
lod = { path = "../lod" }
bevy = { version = "0.18", features = ["dynamic_linking", "mp3", "symphonia-wav"] }
bevy-inspector-egui = "0.36"
random_color = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
bevy_kira_audio = "0.25"
image = "0.25"

[lints]
workspace = true
